# funding-arb

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION_FROM_DCA.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  requirements.txt  scanner-latest.json  setup.sh  start.ps1  start.sh  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  telegram-push.yml
docs/: PURE_FUTURES_IMPLEMENTATION_GUIDE.md  PURE_FUTURES_SPREAD_ANALYSIS.md  README.md  TODO_INDEX.md  TODO_PURE_FUTURES_SPREAD.md  cross-interval-funding-model.md
docs/en/: README.md  cash-and-carry.md  cross-interval.md  fees-and-edge.md  funding-basics.md  overview.md  pure-futures.md  serverless-pipeline.md  skill-cli.md  unified-carry.md
docs/zh-CN/: README.md  cash-and-carry.md  cross-interval.md  fees-and-edge.md  funding-basics.md  overview.md  pure-futures.md  serverless-pipeline.md  skill-cli.md  unified-carry.md
docs/zh-TW/: README.md  cash-and-carry.md  cross-interval.md  fees-and-edge.md  funding-basics.md  pure-futures.md  (+3 more)
plans/: dydx-trading-plan.md  edgex-integration-plan.md
server/: main.py
templates/: config.cash_and_carry.binance.reverse.json  config.cash_and_carry.bitget.json  config.cash_and_carry.btc.json  config.cash_and_carry.bybit.json  config.cash_and_carry.okx.json  config.cash_and_carry.screener.json  config.pure_futures.spread.json
web/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: main.rs
(+158 files in other folders)
